Add Docker support and configuration for MongoDB backup to S3
- Create .dockerignore to exclude unnecessary files
- Update .env.example with AWS credentials and backup settings
- Modify Dockerfile to use Node.js 22 and streamline package installation
- Refactor backup.js to use async functions for better performance
- Add docker-compose.yml for easy service management
- Update package.json to fix dotenv version

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,20 @@
+# MongoDB connection string
 MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/<dbname>?retryWrites=true&w=majority
-#AWS S3
-ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
-#secretAccessKey
-SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-#bucketName
+
+# AWS Access Key ID for S3
+ACCESS_KEY_ID=<your-access-key-id>
+
+# AWS Secret Access Key for S3
+SECRET_ACCESS_KEY=<your-secret-access-key>
+
+# S3 bucket name for storing backups
 BUCKET_NAME=my-backup-bucket
-#region
+
+# AWS region for the S3 bucket
 REGION=ap-south-1
+
+# Cron expression for backup schedule (default: every day at 2 AM)
+CRON_EXPRESSION=0 2 * * *
+
+# Timezone for the cron job (e.g., Asia/Kolkata)
+CRON_TIMEZONE=Asia/Kolkata
