Refactor environment variable naming and update README for clarity on setup instructions

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,4 @@ REGION=ap-south-1
 CRON_EXPRESSION=0 2 * * *
 
 # Timezone for the cron job (e.g., Asia/Kolkata)
-CRON_TIMEZONE=Asia/Kolkata
+TIMEZONE=Asia/Kolkata
